# Mining-Log

./: .pre-commit-config.yaml  main.py  planet_data.json  pyproject.toml
Assets/Maps/Arkadia/: map_ark_3.dds  map_ark_5.dds  map_ark_8.dds
Assets/Maps/Calypso/: map_cal_14.dds  map_cal_23.dds  map_cal_25.dds  map_cal_26.dds  map_cal_32.dds  map_cal_33.dds  map_cal_36.dds  (+7 more)
Modules/Capture/: capture_screen.py
Modules/Map/: MapView.py  PlanetData.json  create_map_window.py  map.html  map_test.py  map_view.py  map_window.py  planet_data.json
Modules/OCR/: image_tests.py  ocr.py  ocr_test.py
config/: default.yaml  planet_data.json
src/: main.py
src/App/: app_context.py  main.py  signal_bus.py
src/ChatLogger/: log_listener.py
src/Map/: map_deed_controller.py  map_view.py  map_window.py  player_position_controller.py
src/Models/: deed_model.py
src/Repositories/: deed_repository.py
src/Scanner/: ocr_controller.py  ocr_core.py  parser.py  player_position_scanner.py  screen_capture.py
src/Services/: map_deed_service.py  player_position_service.py  system_event_manager.py
src/Utils/: cli_wrapper.py  hotkey_scanner_listener.py
src/app/: app_context.py  config_loader.py  main.py  signal_bus.py
src/chat_logger/: log_listener.py
src/map/: map_utils.py  map_view.py  map_window.py
src/repositories/: deed_repository.py
src/scanner/: ocr_controller.py  ocr_core.py  parser.py  player_position_scanner.py
src/services/: map_deed_service.py  player_position_service.py  system_event_manager.py
src/utils/: cli_wrapper.py  hotkey_scanner_listener.py
(+41 files in other folders)
